@@ -5,7 +5,7 @@
  *
  */
  
-
+#include "win.h"
 #include <stdio.h>
 #include <string.h>
 #include "buffer.h"
