@@ -1,3 +1,4 @@
+#include "win.h"
 #include <stdio.h>
 #include <stdlib.h>
 #include "tab.h"
