@@ -2,7 +2,7 @@
  *
  *
  */
-
+#include "win.h"
 #if defined WIN32
 #include <windows.h>
 #endif /* WIN32 */
