@@ -1,15 +1,29 @@
-
-%-h
-%-spanish
--ff
 -R9
-$flagstyle=3Dthin
-
+-allDsdown
 
 b
-0  3235
-1.     8
-2cdc  7.
+2#d  dd
+x-d  dd
+x-d  dd
+x-d  dd
+b
+
+-N
+
+b
+2#d  dd
+x-d  dd
+x-d  dd
+x-d  dd
+b
+
+-n
+
+b
+2#d  dd
+x-d  dd
+x-d  dd
+x-d  dd
 b
 e
 
